--- a/css/_bag.scss
+++ b/css/_bag.scss
@@ -3,7 +3,7 @@
     height: 90px;
 }
 
-.bag{
+.bag {
     box-sizing: border-box;
     position: absolute;
     background-image: url('/assets/equipments/background.jfif');
@@ -15,28 +15,33 @@
     z-index: 2;
     padding: 50px;
     @include flex-row;
+    align-items: flex-start;
     justify-content: space-between;
     // filter: blur(2px);
 
-    .bag-left{
+    .bag-left {
         @include flex-row;
+        justify-content: flex-start;
         max-width: 700px;
         flex-wrap: wrap;
-        .item{
+
+        .item {
             box-sizing: border-box;
             @include flex-row;
             align-items: center;
             justify-content: center;
             @include equipmentSize();
             transition: all ease 0.1s;
+            background-color: #d7b649;
+            border-radius: 15px;
             margin: 5px;
 
-            img{
+            img {
                 display: block;
                 @include equipmentSize();
             }
 
-            &:hover{
+            &:hover {
                 // width: 95px;
                 // height: 95px;
                 border: 4px solid white;
@@ -45,10 +50,11 @@
         }
     }
 
-    .bag-right{
+    .bag-right {
         width: 300px;
+
         // padding: 1px;
-        .name-item{
+        .name-item {
             box-sizing: border-box;
             width: 100%;
             background-color: white;
@@ -56,34 +62,52 @@
             background-color: rgba($color: #d7b649, $alpha: 0.5);
             color: white;
         }
-        .top-info{
+
+        .top-info {
             @include flex-row;
             padding: 20px;
             justify-content: space-between;
             background-color: #dcc169;
-            &-left{
+
+            &-left {
                 @include flex-col;
                 justify-content: space-between;
-                &-top{
+
+                &-top {
                     margin-bottom: 30px;
-                    p{color: white; font-size: 20px; font-weight: bold;}
+
+                    p {
+                        color: white;
+                        font-size: 20px;
+                        font-weight: bold;
+                    }
                 }
-                &-bottom{
-                    .string{
+
+                &-bottom {
+                    .string {
                         font-weight: bold;
                         color: rgba($color: white, $alpha: 0.5);
                     }
-                    .num{
+
+                    .num {
                         font-size: 30px;
                         font-weight: bold;
                         color: white;
                     }
                 }
             }
+
+            &-right {
+                img {
+                    display: block;
+                    width: 130px;
+                    height: 108px;
+                }
+            }
         }
     }
 
-    &-close-button{
+    &-close-button {
         position: absolute;
         right: 10px;
         top: 10px;
@@ -93,3 +117,35 @@
     }
 
 }
+
+.notification{
+    position: fixed;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    &-item {
+        padding: 10px 20px;
+        margin-bottom: 5px;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: #fff;
+        font-size: 16px;
+        border-radius: 8px;
+        transition: opacity 0.5s ease-in-out;
+        opacity: 0;
+        pointer-events: none;
+        z-index: 1000;
+    
+        &.show {
+            opacity: 1;
+        }
+    
+        &.hidden {
+            opacity: 0;
+        }
+    
+        &-equipname{
+            color: #d7b649;
+        }
+    }
+}
+
