--- a/css/index.css
+++ b/css/index.css
@@ -238,6 +238,66 @@ canvas {
   color: rgb(223, 31, 219);
 }
 
+.body-signup {
+  background-image: url("/assets/loginform/background.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.body-signup-form {
+  border-radius: 10px;
+  box-sizing: border-box;
+  width: 35%;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.body-signup-form > * {
+  margin-bottom: 20px;
+}
+.body-signup-form:last-child {
+  margin-bottom: 0;
+}
+.body-signup-form h2 {
+  color: white;
+}
+.body-signup-form input {
+  width: 70%;
+  outline: none;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: rgb(223, 31, 219);
+  font-weight: bold;
+}
+.body-signup-form button {
+  padding: 10px 15px;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: rgb(223, 31, 219);
+}
+.body-signup-form button:hover {
+  cursor: pointer;
+}
+.body-signup-form-navigation {
+  font-weight: bold;
+  color: white;
+}
+.body-signup-form-navigation a {
+  text-decoration: none;
+  color: rgb(223, 31, 219);
+}
+
 .bag {
   box-sizing: border-box;
   position: absolute;
