--- a/css/index.css
+++ b/css/index.css
@@ -126,31 +126,31 @@ body {
   background-color: #a3f07a;
 }
 
-.punch {
+.normal-skill {
   position: absolute;
-  right: 0;
   bottom: 10px;
+  right: 0;
   width: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.punch > * {
+.normal-skill > * {
   margin-bottom: 0px;
 }
-.punch .avatar {
+.normal-skill .avatar {
   width: 60%;
   border-radius: 50%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.1);
 }
-.punch .avatar img {
+.normal-skill .avatar img {
   display: block;
   width: 100%;
   height: auto;
   margin-bottom: 0;
 }
-.punch .title {
+.normal-skill .title {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -160,7 +160,41 @@ body {
   padding: 0 5px;
   border-radius: 5px;
 }
-.punch .title p {
+.normal-skill .title p {
+  font-weight: bold;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.expecial-skill {
+  position: absolute;
+  bottom: 10px;
+  right: 110px;
+  width: 26px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.expecial-skill .avatar {
+  background-color: rgba(13, 43, 240, 0.1);
+  border-radius: 50%;
+}
+.expecial-skill .avatar img {
+  width: 26px;
+  display: block;
+  margin: auto;
+}
+.expecial-skill .title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 0 5px;
+  border-radius: 5px;
+}
+.expecial-skill .title p {
   font-weight: bold;
   text-align: center;
   color: rgba(0, 0, 0, 0.5);
@@ -301,6 +335,64 @@ body {
 .body-signup-form-navigation a {
   text-decoration: none;
   color: rgb(223, 31, 219);
+}
+
+.shop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  padding: 40px 10px;
+}
+.shop-properties {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.shop-properties-mora {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.shop-properties-mora-img {
+  width: 20px;
+  margin-right: 10px;
+}
+.shop-properties-mora-info {
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.6);
+}
+.shop-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.shop-items-left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.shop-items-left-item {
+  padding: 5px;
+  background-color: rgb(223, 223, 223);
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 2px solid rgb(223, 223, 223);
+  transition: border ease 0.5s;
+}
+.shop-items-left-item img {
+  display: block;
+  margin: auto;
+}
+.shop-items-left-item:hover {
+  cursor: pointer;
+  border: 2px solid rgb(93, 132, 218);
 }
 
 .bag {
