--- a/css/index.css
+++ b/css/index.css
@@ -212,7 +212,7 @@ body {
 }
 #items img {
   display: block;
-  width: 6%;
+  width: 40px;
   height: auto;
   margin-right: 10px;
 }
@@ -715,4 +715,112 @@ body {
   color: red;
   font-weight: bold;
   font-size: 50px;
+}
+
+.payment {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: white;
+  padding: 50px;
+  overflow-y: auto;
+}
+.payment h2 {
+  margin-bottom: 20px;
+}
+.payment-item {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.payment-item-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px 28px 10px 20px;
+  border: 2px solid rgb(215, 215, 215);
+  border-radius: 5px;
+  margin-bottom: 5px;
+  transition: all 0.5s ease;
+}
+.payment-item-info img {
+  width: 20px;
+  margin-right: 5px;
+}
+.payment-item-info p {
+  font-weight: bold;
+}
+.payment-item-info.active {
+  border: 2px solid rgb(67, 90, 235);
+}
+.payment-item-price {
+  font-weight: bold;
+  color: rgb(147, 147, 147);
+}
+.payment-info {
+  margin-bottom: 20px;
+}
+.payment-info-agribank {
+  width: 300px;
+  border: 1px solid red;
+  margin-right: 20px;
+}
+.payment-info-momo {
+  width: 300px;
+}
+.payment-note {
+  margin-bottom: 5px;
+}
+.payment-form {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: 50px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(187, 187, 187);
+}
+.payment-form h3 {
+  margin-bottom: 20px;
+  color: rgb(42, 124, 239);
+}
+.payment-form label {
+  font-weight: bold;
+  color: #6b6b6b;
+  margin-bottom: 10px;
+}
+.payment-form input[type=text] {
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  background-color: #f5f5f5;
+}
+.payment-form-bank {
+  margin-bottom: 10px;
+}
+.payment-form-bank-item {
+  margin-right: 10px;
+}
+.payment-form-package {
+  margin-bottom: 10px;
+}
+.payment-form-submit {
+  padding: 8px;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  background-color: rgb(82, 174, 232);
+}
+.payment-form-submit:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
