--- a/css/_mixin.scss
+++ b/css/_mixin.scss
@@ -40,3 +40,25 @@
 @mixin text-border {
     border: 1px solid rgb(187, 187, 187);
 }
+
+@mixin window {
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 1;
+}
+
+@mixin button($bgcolor, $color, $padvertical, $padhorizontal, $radius){
+    outline: none;
+    border: none;
+    background-color: $bgcolor;
+    padding: $padvertical $padhorizontal;
+    color: $color;
+    border-radius: $radius;
+    font-weight: bold;
+    &:hover{cursor: pointer;}
+}
