--- a/css/_other.scss
+++ b/css/_other.scss
@@ -1,35 +1,44 @@
-.other{
+.other {
     @include window;
     @include flex-col;
     padding: 50px;
 
-    &-title{
+    &-title {
         font-weight: bold;
         font-size: large;
         color: rgb(72, 154, 248);
     }
-    &-panel{
+
+    &-panel {
         @include flex-col;
 
-        &-note{
+        &-note {
             margin-top: 20px;
             font-weight: bold;
             color: #ccc;
         }
-        
-        &-item{
+
+        &-item {
             @include flex-row;
             @include text-border;
             border-radius: 10px;
             width: fit-content;
             margin-top: 20px;
             padding: 20px;
+
             &-name {
                 font-weight: bold;
                 margin-right: 20px;
             }
-            button{
+
+            button {
                 @include button(rgb(91, 145, 244), white, 10px, 20px, 5px);
+
+                &[disabled] {
+                    background-color: gray;
+                    color: lightgray;
+                    cursor: not-allowed;
+                }
             }
         }
     }
